# age-plugin-simplepq

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: cli.rs  main.rs
